added fb login button

--- a/index.html
+++ b/index.html
@@ -344,6 +344,11 @@
       data-use-continue-as="true"></div>
   </div>
 
+<footer class="row column footer">
+  <p> Devoloped by <a target="_blank" href="https://arorachaitanya.github.io"> CHAITANYA ARORA </a></p>
+</footer>
+
+
 
       <script src="https://use.fontawesome.com/5e0885b087.js"></script>
     <script src="js/vendor/jquery.js"></script>
